--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -122,5 +122,9 @@
         "example": "200"
       }
     }
+  },
+  "goToWebsiteButton": {
+    "message": "Vai al Sito Web",
+    "description": "Pulsante per andare al sito web della pagina corrente"
   }
 }
